# sessionview

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  README.md  README.zh-CN.md  SECURITY.md  biome.json  eslint.config.js  index.html  knip.json  lefthook.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-07-06T23-47-28-289Z.yml
npm/scripts/: generate-platform-packages.mjs
npm/sessionview/: README.md  package.json
scripts/: release.sh
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: indexer.rs  lib.rs  models.rs  pricing.rs  provider.rs  provider_utils.rs  tool_metadata.rs  watcher.rs
src-tauri/src/commands/: file_access.rs  gui.rs  mod.rs  search.rs  session_tail.rs  sessions.rs  settings.rs  terminal.rs  usage.rs
src-tauri/src/commands/sessions/: tests.rs
src-tauri/src/db/: mod.rs  queries.rs  row_mapper.rs  sync.rs
src-tauri/src/db/queries/: favorites.rs  search.rs  sessions.rs  tree.rs  usage.rs  usage_project.rs
src-tauri/src/db/sync/: tests.rs
src-tauri/src/exporter/: format.rs  html.rs  mod.rs  templates.rs  tool_html.rs
src-tauri/src/exporter/tool_html/: tests.rs
src-tauri/src/indexer/: tests.rs
src-tauri/src/provider/: catalog.rs  plan.rs  state.rs  tokens.rs  traits.rs  trash.rs  util.rs
src-tauri/src/provider/util/: tool_pairing.rs
src-tauri/src/provider_utils/: content_parts.rs
src-tauri/src/providers/: cc_mirror.rs  mod.rs
src-tauri/src/providers/antigravity/: mod.rs  parser.rs
src-tauri/src/providers/antigravity/parser/: lenient_json.rs  steps.rs  tests.rs  workspace.rs
src-tauri/src/providers/claude/: images.rs  mod.rs  parser.rs
src-tauri/src/providers/claude/parser/: content.rs  handlers.rs  tests.rs  text_clean.rs
src-tauri/src/providers/codex/: mod.rs  parser.rs  tools.rs
src-tauri/src/providers/codex/parser/: event_msg.rs  mod.rs  response_item.rs  tests.rs  usage.rs  value_helpers.rs
src-tauri/src/providers/cursor/: acp.rs  mod.rs  parser.rs  store_db.rs  tools.rs
src-tauri/src/providers/grok/: mod.rs  parser.rs
src-tauri/src/providers/grok/parser/: history.rs  types.rs  updates.rs
src-tauri/src/providers/kimi/: mod.rs  parser.rs  tools.rs
src-tauri/src/providers/kimi/parser/: dispatch.rs  index.rs  subagents.rs
src-tauri/src/providers/opencode/: mod.rs  parser.rs
src-tauri/src/providers/pi/: mod.rs  parser.rs  types.rs
src-tauri/src/providers/pi/parser/: messages.rs  tests.rs
src-tauri/src/server/: assets.rs  dispatch.rs  events.rs  export.rs  mod.rs
src-tauri/src/services/: error.rs  events.rs  image_cache.rs  image_markers.rs  load_cancel.rs  mod.rs  path_norm.rs  persisted_output_cache.rs  provider_snapshots.rs  session_cache.rs  session_lifecycle.rs  session_resolution.rs  session_view.rs  source_sync.rs  tail_reader.rs  terminal.rs  timeday.rs
src-tauri/src/services/session_view/: tests.rs
src-tauri/src/tool_metadata/: build.rs  names.rs  presentation.rs  registry.rs  result.rs  summary.rs
src-tauri/src/tool_metadata/presentation/: input.rs  result.rs  tests.rs  util.rs
src-tauri/tests/: cleanup_stale_links.rs  cursor_real_smoke.rs  grok_real_smoke.rs  kimi_real_smoke.rs  nsis_uninstall.rs  parse_coverage_real_audit.rs  parser_tests.rs  provider_lifecycle_real_interface.rs  refresh_usage_timing_real.rs  tool_display_test.rs
src-tauri/tests/fixtures/: codex_session.jsonl
src-tauri/tests/fixtures/grok/sessions/%2Ftmp%2Fdemo-project/01900000-0000-7000-8000-000000000001/: chat_history.jsonl  summary.json  updates.jsonl
src-tauri/tests/fixtures/grok/sessions/%2Ftmp%2Fdemo-project/01900000-0000-7000-8000-000000000001/subagents/01900000-0000-7000-8000-000000000002/: meta.json
src-tauri/tests/fixtures/grok/sessions/%2Ftmp%2Fdemo-project/01900000-0000-7000-8000-000000000001/subagents/01900000-0000-7000-8000-000000000004/: meta.json
src-tauri/tests/fixtures/grok/sessions/%2Ftmp%2Fdemo-project/01900000-0000-7000-8000-000000000002/: chat_history.jsonl  summary.json  updates.jsonl
src-tauri/tests/fixtures/grok/sessions/%2Ftmp%2Fdemo-project/01900000-0000-7000-8000-000000000003/: chat_history.jsonl  summary.json  updates.jsonl
src-tauri/tests/fixtures/grok/sessions/%2Ftmp%2Fdemo-project/01900000-0000-7000-8000-000000000004/: chat_history.jsonl  summary.json
src-tauri/windows/: nsis-hooks.nsh
src/App/: KeyboardShortcuts.ts  SubagentOpen.test.ts  SubagentOpen.ts  SyncManager.ts  TitleBar.test.tsx  index.tsx
src/app/: ActivityBar.tsx  KeyboardOverlay.tsx  KeyboardShortcuts.ts  StatusBar.tsx  SubagentOpen.test.ts  SubagentOpen.ts  SyncManager.ts  TitleBar.test.tsx  TitleBar.tsx  index.tsx
src/components/: ActivityBar.tsx  CodeBlock.test.tsx  CodeBlock.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ContextMenu.tsx  EditorGroupsContainer.tsx  ExportDialog.tsx  FavoritesView.tsx  InputDialog.tsx  KeyboardOverlay.tsx  MergedToolRow.tsx  SearchOverlay.tsx  SettingsPanel.tsx  StatusBar.tsx  TabBar.tsx  ToastContainer.tsx  TreeNode.tsx  icons.tsx
src/i18n/: en.json  i18n.test.ts  index.ts  zh.json
src/lib/: auto-index.ts  backend-events.ts  diff.test.ts  diff.ts  errors.test.ts  external-links.test.ts  external-links.ts  formatters.test.ts  formatters.ts  heatmap.test.ts  heatmap.ts  icons.tsx  image-cache.ts  message-content.test.ts  message-content.ts  message-images.ts  persisted-output.ts  platform.ts  provider-watch.test.ts  provider-watch.ts  session-command-events.ts  subagent.test.ts  subagent.ts  tauri.test.ts  tauri.ts  transport.test.ts  tree-builders.test.ts  tree-builders.ts  tree-utils.test.ts  tree-utils.ts  types.ts  usage.test.ts  usage.ts
src/stores/: editorGroups.test.ts  editorGroups.ts  favorites.ts  providerSnapshots.test.ts  providerSnapshots.ts  search.test.ts  search.ts  selection.ts  settings.ts  theme.ts  toast.ts  updater.test.ts  updater.ts  usageView.ts  viewport.test.tsx  (+1 more)
style/: rust.md  ts.md
(+190 files in other folders)
