[package]
name = "cc-session"
version = "0.4.2"
description = "High-performance desktop session explorer for local AI coding sessions"
authors = ["yury <yury.zero.21@gmail.com>"]
edition = "2021"

[lib]
name = "cc_session_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cc-session"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
rayon = "1.10"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
memmap2 = "0.9"
memchr = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
md5 = "0.7"
walkdir = "2"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
zip = "2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
tokio = { version = "1", features = ["rt"] }
log = "0.4"
pulldown-cmark = "0.13.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
similar = "3.0.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
